# openclaw-os

./: .gitignore  README.md
assets/boot/: theme.txt
assets/foot/: foot.ini
assets/plymouth/: openclaw.plymouth  openclaw.script
assets/sway/: config
assets/waybar/: config.jsonc  style.css
docs/: architecture.md  capability-cards.md  first-boot.md  offline-tts.md  onboarding.md  rust-iced-deep-dive.md  ui-design.md  voice.md  why-not-web.md
nix/: flake.nix
nix/modules/: base.nix  boot.nix  hardware-aarch64.nix  hardware-x86.nix  openclaw.nix  raspberry-pi.nix  shell.nix  voice.nix
shell/: Cargo.toml
shell/src/: about.rs  ambient.rs  cards.rs  conversation.rs  device_identity.rs  dock.rs  gateway.rs  main.rs  messaging_setup.rs  notifications.rs  ollama.rs  spotlight.rs  statusbar.rs  terminal.rs  theme.rs  welcome.rs  window_manager.rs
shell/src/widgets/: glass_card.rs  mod.rs  particle_field.rs
