[package]
name = "openclaw-shell"
version = "0.1.0"
edition = "2021"
description = "OpenClaw OS Shell — ambient display, cards, and conversation UI"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio", "image", "markdown", "highlighter"] }
iced_fonts = { version = "0.1.1", features = ["bootstrap"] }
chrono = "0.4"
rand = "0.8"
noise = "0.9"
open = "5"
tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["pem", "rand_core"] }
sha2 = "0.10"
base64 = "0.22"
pkcs8 = { version = "0.10", features = ["pem"] }
ureq = { version = "2", features = ["json"] }
